--- a/src/components/Overview.css
+++ b/src/components/Overview.css
@@ -14,7 +14,7 @@
   justify-content: start;
   border: 1px solid #ccc;
   border-radius: 5px;
-  padding: 1rem 2rem 1rem 0.7rem;
+  padding: 1rem;
   align-items: flex-start;
   margin-top: 1rem;
 }
