--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,21 @@ padding-top: 3rem;
 font-family: Montserrat;
 }
 
+
+
+
+@media only screen and (max-width: 600px) {
+.App{
+	font-size: 14px;
+}
+}
+
+
+/* 
+@media (min-width: 601px) and (max-width: 900px) {
+  .App{
+	font-size: 14px;
+}
+
+} */
+
