--- a/src/components/ExpenseApp.css
+++ b/src/components/ExpenseApp.css
@@ -2,7 +2,14 @@
 	margin:  auto;
 	padding: 1rem;
 	align-items: center;
-width: 40%;
+width: 50%;
 background-color: #fff;
 }
 
+@media only screen and (max-width: 600px) {
+	.container{
+
+	width: 70%;
+
+	}
+	}
